--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -39,7 +39,20 @@ Available Options:
   error: Fail the action with an error message
   ignore: Do not output any warnings or errors, the action does not fail
 
-    if-no-files-found: # optional, default is warn
+    steps:
+  - name: Install dependencies
+    run: npm install
+
+  - name: Build project
+    run: npm run build
+
+  - name: Deploy to production
+    uses: actions/deploy@v2
+    with:
+      repo: username/repo
+      branch: gh-pages
+      if-no-files-found: warn # Can also be `ignore` or `error`
+
     # Duration after which artifact will expire in days. 0 means using default retention.
 Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
 
